// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Group Default smoke-test 1`] = `
<main class="roboto-normal">
  <div class="group_root__JMRrN group_gap-sm__VCWmB">
    <div>
      Child 1
    </div>
    <div>
      Child 2
    </div>
  </div>
  <div class="stack_root__KVCbK toast_toast-container__8fZtQ stack_gap-xs__xTnny"
       id="toast-container"
       data-testid="toast-container"
       style="padding: 0px;"
  >
  </div>
</main>
`;

exports[`components/Group WithProps smoke-test 1`] = `
<main class="roboto-normal">
  <div class="group_root__JMRrN group_justify-center__JoiHJ group_group-wrap__6mKEO group_gap-md__ZabtE group_fullWidth__KxvAQ"
       style="padding: 16px; margin-bottom: 8px;"
  >
    <div>
      Child 1
    </div>
    <div>
      Child 2
    </div>
  </div>
  <div class="stack_root__KVCbK toast_toast-container__8fZtQ stack_gap-xs__xTnny"
       id="toast-container"
       data-testid="toast-container"
       style="padding: 0px;"
  >
  </div>
</main>
`;
